--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "unsplash search engine",
+  "name": "unsplash-search-engine",
   "version": "0.1.0",
   "private": true,
   "scripts": {
